Test classes derived from TestClassWithDatabase.java passing separately, though not together (and not DominionCVRExportParserTests.java).